# callib

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md
src/: CMakeCache.txt  main.cpp
src/core/: CMakeLists.txt  application.cpp  application.h  resources.qrc  service_locator.h
src/core/interfaces/: i_clipboard_monitor.h  i_document_normalizer.h  i_file_handler.h  i_heading_dialog.h  i_image_capturer.h  i_logger.h  i_section_manager.h  i_settings_manager.h  i_shortcut_manager.h  i_subject_manager.h  i_toc_generator.h
src/features/: CMakeLists.txt
src/features/clipboard/: CMakeLists.txt  clipboard_history.cpp  clipboard_history.h  clipboard_monitor.cpp  clipboard_monitor.h  i_clipboard_history.h
src/features/document_normalizer/: CMakeLists.txt  normalizer.cpp  normalizer.h
src/features/heading_search/: CMakeLists.txt  heading_dialog.cpp  heading_dialog.h  heading_search.cpp  heading_search.h
src/features/image_capture/: CMakeLists.txt  image_capturer.cpp  image_capturer.h
src/features/keyboard_shortcuts/: CMakeLists.txt  shortcut_manager.cpp  shortcut_manager.h
src/features/notes/: i_note_manager.h  note_manager.cpp  note_manager.h
src/features/section_manager/: CMakeLists.txt  section_manager.cpp  section_manager.h
src/features/settings/: CMakeLists.txt  settings_dialog.cpp  settings_dialog.h  settings_manager.cpp  settings_manager.h
src/features/shortcuts/: i_shortcuts_manager.h  shortcuts_manager.cpp  shortcuts_manager.h
src/features/subject_management/: CMakeLists.txt  subject_manager.cpp  subject_manager.h
src/features/toc_generator/: CMakeLists.txt  toc_generator.cpp  toc_generator.h
src/features/ui/: CMakeLists.txt  main_window.cpp  main_window.h  resources.qrc
src/utilities/: CMakeLists.txt  debug_logger.cpp  debug_logger.h  file_handler.cpp  file_handler.h  logger.cpp  logger.h
